Use generated models
